--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title> <link rel="stylesheet" href="pablito.css">
 </head>
 <body>
+<header>
+    <nav>
+        <a href="index.html"> INICIO</a>
+        <a href="https://driftforu.com/" > LOJA
+        
+        </a>
+    </nav>
+</header>
 <strong><h1>Drift</h1></strong>
 <h2>O que é drift?</h2>
 <p>Drift ou Drifting, é uma técnica de direção utilizada em carros, consiste em 
@@ -13,13 +21,12 @@ deslizar nas curvas escapando a traseira, girar o volante para que as rodas dian
 estejam sempre em uma direção oposta a curva, controlando o nível de derrapagem, fazendo 
 o carro literalmente andar de lado. </p>
 <div><img src="drift.jpeg" width="500" height="260"></div>
-<h3>Teste se vocẽ é bom no drift.</h3>
-<nav> <a href=></a> </nav>
+
 <ul>
 <h3>Regras do Drift</h3>
-1. O piloto líder não deve estar fora da pista ou completamente fora do traçado; 
-2. O piloto perseguidor só pode ultrapassar em um local de Clip-Point interno; 
-3. O piloto perseguidor só pode ultrapassar o piloto líder pelo lado de dentro da curva;
+<li>1. O piloto líder não deve estar fora da pista ou completamente fora do traçado; </li>
+<li>2. O piloto perseguidor só pode ultrapassar em um local de Clip-Point interno; </li>
+<li>3. O piloto perseguidor só pode ultrapassar o piloto líder pelo lado de dentro da curva;</li>
 </ul>
 
     
