--- a/competições.html
+++ b/competições.html
@@ -11,6 +11,6 @@
     <h2>Quem o melhor nisso no Brasil?</h2>
     <p>É o Diego higa que é tricampeão brasileiro com apenas 27 anos</p>
     <p>Ele ganhou uma competição criado pela pelo aplicativo de stream "Netflix" que reuniu os melhores pilotos de todo o mundo.</p>
-    <div><img src="trab.jpeg"></div>
+    <div><img src="trab2.jpeg"></div>
 </body>
 </html>
