--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <a href="index.html"> INICIO</a>
         <a href="https://driftforu.com/" > LOJA
-        
+        <a href="competições.html"> COMPETIÇÕES</a>
         </a>
     </nav>
 </header>
