--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <header>
     <nav>
         <a href="index.html"> INICIO</a>
-        <a href="https://driftforu.com/" > LOJA
+        <a href="https://driftforu.com/" > LOJA </a>
         <a href="competições.html"> COMPETIÇÕES</a>
-        </a>
     </nav>
 </header>
 <strong><h1>Drift</h1></strong>
